@@ -2,15 +2,23 @@ package com.tgd.trip.attraction.mapper;
 
 import com.tgd.trip.attraction.domain.Attraction;
 import com.tgd.trip.attraction.dto.AttractionDto;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AttractionMapper {
 
-    public List<AttractionDto.Response> entityToResponse(List<Attraction> attractions) {
-        return attractions.stream().map(AttractionDto.Response::new).collect(Collectors.toList());
+    public AttractionDto.Response entityToResponse(Attraction attraction) {
+        return new AttractionDto.Response(attraction);
+    }
+
+    public List<AttractionDto.Response> entityToResponse(Page<Attraction> attractions) {
+        return attractions.map(this::entityToResponse).stream().toList();
+    }
+
+    public Page<AttractionDto.Response> entityToPageResponse(Page<Attraction> attractions) {
+        return attractions.map(this::entityToResponse);
     }
 }
